# PDController

./: CMakeLists.txt  package.xml  pd_plugin.xml  readme.md
action/: pd.action
cfg/: pd_controller.cfg
cfg/cpp/pd_controller/: PDControllerConfig.h
docs/: PDControllerConfig-usage.dox  PDControllerConfig.dox  PDControllerConfig.wikidoc
launch/: server.launch
msg/: goal.msg  prob.msg  ray.msg
param/: local_costmap_params.yaml
src/: bresenham2D.cpp  bresenham2D.h  mb.cpp  pd_controller.cpp  pd_controller.h  pd_server.cpp  pid_controller.cpp  pid_implementation.cpp  pid_implementation.h  smoother.h  velocity_smoother.h
src/pd_controller/cfg/: PDControllerConfig.py
